--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,10 @@
 \usepackage{lipsum}
 \input{macros}
 \everymath{\displaystyle}
+\usepackage{hyperref}
+
+\usepackage{xcolor}
+\definecolor{brickred}{rgb}{0.8, 0.25, 0.33}
 
 \begin{document}
 % \fancytitle{\textit{Theory of Probability and Random Processes}}{Solutions}{Koralov and Sinai}
