--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,9 @@
 \usepackage{xcolor}
 \definecolor{brickred}{rgb}{0.8, 0.25, 0.33}
 
+
+\newtheorem{lemma}{Lemma}[chapter]
+
 \begin{document}
 % \fancytitle{\textit{Theory of Probability and Random Processes}}{Solutions}{Koralov and Sinai}
 
