--- a/chpts/chpt1.tex
+++ b/chpts/chpt1.tex
@@ -182,12 +182,19 @@
 \begin{problem}{12}
 \end{problem}
 \begin{solution}
-    
+    Let $\cB(X)$ be the Borel sets of $X$, the $\sigma$-algebra of all of the open sets in $X$. Also let $\cB(X_1) \times \ldots \times \cB(X_n)$ be the product $\sigma$-algebra of $X_1,\ldots,X_n$. That $\cB(X_1) \times \ldots \times \cB(X_n) \subset \cB(X)$ is trivial since the product of open sets in $X_1, \ldots, X_n$ must be an open set in $X$. It remains to show inclusion in the other direction. Since $X$ is a separable metric space, it is second-countable. Moroever, we know that $B = \{x_1 \times \ldots \times x_n : x_1 \in X_1,\ldots,x_n \in X_n\}$ forms a basis of the product topology. Thus, any open set in $X$ can be constructed through the countable unions of sets in $B$. And so, since $\sigma$-algebras are closed under countable unions the inclusion holds in the other direction.
 \end{solution}
 \begin{problem}{13}
 \end{problem}
 \begin{solution}
-    
+    For any $n > 5$, $n^4 \geq 1000$. Therefore, we are mostly concerned with the set of all perfect squares and cubes less than or equal to 1000. Thus, we find these first using the inclusion-exclusion principle. Then, brute-force count the remaining numbers that do not fall into these sets. 
+    \begin{align*}
+        \sharp\set{1 \leq n \leq 1000: n^2 \leq 1000~\text{or}~n^3 \leq 1000} &= \sharp \set{1 \leq n \leq 1000: n^2 \leq 1000} + \sharp \set{1 \leq n \leq 1000: n^3 \leq 1000} \\ &\qquad\qquad - \sharp\set{1 \leq n \leq 1000: n^6 \leq 1000}, \\
+        &= \lfloor \sqrt{1000} \rfloor + \lfloor \sqrt[3]{1000} \rfloor - 2, \\
+        &= 31 + 10 - 3, \\
+        &= 39.
+    \end{align*}
+    It remains to account for numbers where the exponential by $5,7$ are within 1000. This only holds for $2^5,2^7,3^5$. Therefore, there are 41 numbers less than or equal to 1000 that are integer powers (greater than 1) of another integer. Thus, supposing a uniform distribution, the probability of choosing such an integer is $\frac{41}{1000}$.
 \end{solution}
 \begin{problem}{14}    
 \end{problem}
