--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 \usepackage{lipsum}
 \input{macros}
 \everymath{\displaystyle}
+\usepackage{tikz}
 \usepackage{hyperref}
 
 \usepackage{xcolor}
@@ -17,5 +18,7 @@
 \input{chpts/chpt1.tex}
 \chapter{Sequences of Independent Trials}
 \input{chpts/chpt2.tex}
+\chapter{Lebesgue Integral and Mathematical Expectation}
+\input{chpts/chpt3.tex}
 
 \end{document}
