--- a/toc/main.tex
+++ b/toc/main.tex
@@ -61,5 +61,9 @@ Here are a list of things, both theorems and problems, that I think are importan
     \item[\prac] \textit{Prove} the Glivenko-Cantelli Theorem.
     \item[\elegant] \textit{Prove} the Poisson Limit Theorem.
 \end{itemize}
+\section{Lebesgue Integral and Mathematical Expectation}
+\begin{itemize}[nosep]
+    \item 
+\end{itemize}
 
 \end{document}
