--- a/main.tex
+++ b/main.tex
@@ -20,5 +20,7 @@
 \input{chpts/chpt2.tex}
 \chapter{Lebesgue Integral and Mathematical Expectation}
 \input{chpts/chpt3.tex}
+\chapter{Conditional Probabilities and Independence}
+\input{chpts/chpt4.tex}
 
 \end{document}
