--- a/toc/main.tex
+++ b/toc/main.tex
@@ -63,7 +63,16 @@ Here are a list of things, both theorems and problems, that I think are importan
 \end{itemize}
 \section{Lebesgue Integral and Mathematical Expectation}
 \begin{itemize}[nosep]
-    \item 
+    \item[\cold] \textit{Define} the Riemann-Stieltjes integral.
 \end{itemize}
+
+\section{Conditional Probabilities and Independence}
+\begin{itemize}[nosep]
+    \item[\cold] \textit{Define} conditional probability.
+    \item[\cold] \textit{Prove} Bayes' Theorem.
+    \item[\cold] \textit{Define} independence of two or more events, $\sigma$-algebras, and random variables. 
+    \item[\prac] \textit{Prove} if two random variables are independent, then the expectation of their product is equal to the product of their expectations. 
+\end{itemize}
+
 
 \end{document}
