--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,8 @@
 \input{chpts/chpt1.tex}
 \chapter{Sequences of Independent Trials}
 \input{chpts/chpt2.tex}
-\chapter{Lebesgue Integral and Mathematical Expectation}
-\input{chpts/chpt3.tex}
+% \chapter{Lebesgue Integral and Mathematical Expectation}
+% \input{chpts/chpt3.tex}
 \chapter{Conditional Probabilities and Independence}
 \input{chpts/chpt4.tex}
 
