--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{report}
 \usepackage{lipsum}
+\usepackage[Lenny]{fncychap}
 \input{macros}
 \everymath{\displaystyle}
 \usepackage{tikz}
@@ -18,8 +19,8 @@
 \input{chpts/chpt1.tex}
 \chapter{Sequences of Independent Trials}
 \input{chpts/chpt2.tex}
-% \chapter{Lebesgue Integral and Mathematical Expectation}
-% \input{chpts/chpt3.tex}
+\chapter{Lebesgue Integral and Mathematical Expectation}
+\input{chpts/chpt3.tex}
 \chapter{Conditional Probabilities and Independence}
 \input{chpts/chpt4.tex}
 
